--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": { 
-      "dev": "nodemon server.js"
-   },
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
+  "engines": {
+    "node": "8.6.0"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -13,7 +17,8 @@
     "apollo-engine": "^1.1.1",
     "apollo-server-express": "^1.3.6",
     "body-parser": "^1.18.3",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "redis": "^2.8.0"
   },
   "devDependencies": {
     "nodemon": "^1.17.5"
