--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "nodemon server.js",
     "dev": "nodemon server.js"
   },
   "engines": {
@@ -18,6 +18,7 @@
     "apollo-server-express": "^1.3.6",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "mongoose": "^5.2.7",
     "redis": "^2.8.0"
   },
   "devDependencies": {
